--- a/ccna.html
+++ b/ccna.html
@@ -14,7 +14,7 @@
         <ul class="nav">
           <li class="name">PoulSociety</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="ccna.html">CCNA</a></li>
+          <li><a href="ccna.html" class="selected">CCNA</a></li>
 		  <li><a href="ccnp.html">CCNP</a></li>
 		  <li><a href="about.html">About</a></li>
 		  <li><a href="contact.html">Contact Us</a></li>
