--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
           <li><a href="ccna.html">CCNA</a></li>
 		  <li><a href="ccnp.html">CCNP</a></li>
 		  <li><a href="about.html">About</a></li>
-		  <li><a href="contact.html">Contact Us</a></li>
+		  <li><a href="contact.html" class="selected">Contact Us</a></li>
         </ul>
     </div>
 
