--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="ccna.html">CCNA</a></li>
 		  <li><a href="ccnp.html">CCNP</a></li>
-		  <li><a href="about.html">About</a></li>
+		  <li><a href="about.html" class="selected">About</a></li>
 		  <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
