--- a/ccnp.html
+++ b/ccnp.html
@@ -15,7 +15,7 @@
           <li class="name">PoulSociety</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="ccna.html">CCNA</a></li>
-		  <li><a href="ccnp.html">CCNP</a></li>
+		  <li><a href="ccnp.html" class="selected">CCNP</a></li>
 		  <li><a href="about.html">About</a></li>
 		  <li><a href="contact.html">Contact Us</a></li>
         </ul>
