--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">PoulSociety</li>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="selected">Home</a></li>
           <li><a href="ccna.html">CCNA</a></li>
 		  <li><a href="ccnp.html">CCNP</a></li>
 		  <li><a href="about.html">About</a></li>
