--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/responsive.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
@@ -22,14 +21,14 @@
     </div>
 
     <header>
-      
+      <img src="images/poul.png" alt="Profile picture of Poul" class="profile-image">
+      <h1 class="tag name">Hello, I'm Poul</h1>
+      <p class="tag location">My home is Dar es Salaam, Tanzania.</p>
     </header>
 
     <div id="wrapper">
-		<section id="primary">
-			<img src="images/poul.png" alt="Photograph of Paulo" class="profile-photo" class="profile-photo">
-		</section>
-		<section id="secondary">
+		<section>
+			<img src="images/poul.png" alt="Photograph of Paulo" class="profile-photo">
 			<h3>About</h3>
 			<p>Hi, I'm Paulo Longino! This is the Society of science and Technology where we explore new technologies and bringing them close to you for betterment of our Generation.</p>
 			<p>Follow us on twitter <a href="https://twitter.com/poulsociety2017"> @poulsociety2017</a> and on facebook <a href="https://www.facebook.com/profile.php?id=100014803809097">@poulsociety2017</a></p>
