--- a/ccna.html
+++ b/ccna.html
@@ -22,12 +22,14 @@
     </div>
 
     <header>
-      
+      <img src="images/poul.png" alt="Profile picture of Poul" class="profile-image">
+      <h1 class="tag name">Hello, I'm Poul</h1>
+      <p class="tag location">My home is Dar es Salaam, Tanzania.</p>
     </header>
 
     <div id="wrapper">
 		<section id="primary">
-			<img src="images/ccna.jpg" alt="Photograph of Paulo" class="profile-photo" class="profile-photo">
+			<img src="images/ccna.jpg" alt="CCNA logo" class="profile-photo">
 		</section>
 		<section id="secondary">
 			<h3>Cisco Certified Network Associate | CCNA</h3>
