--- a/ccnp.html
+++ b/ccnp.html
@@ -5,8 +5,6 @@
   <title>PoulSociety</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/responsive.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
@@ -22,12 +20,13 @@
     </div>
 
     <header>
-      
+      <img src="images/poul.png" alt="Profile picture of Poul" class="profile-image">
+      <h1 class="tag name">Hello, I'm Poul</h1>
+      <p class="tag location">My home is Dar es Salaam, Tanzania.</p>
     </header>
-
     <div id="wrapper">
 		<section id="primary">
-			<img src="images/ccnp.jpg" alt="Photograph of Paulo" class="profile-photo" class="profile-photo">
+			<img src="images/ccnp.jpg" alt="CCNP logo" class="profile-photo">
 		</section>
 		<section id="secondary">
 			<h3>Cisco Certified Network Professional | CCNP</h3>
