--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,9 @@
     </div>
 
     <header>
-      
+      <img src="images/poul.png" alt="Profile picture of Poul" class="profile-image">
+      <h1 class="tag name">Hello, I'm Poul</h1>
+      <p class="tag location">My home is Dar es Salaam, Tanzania.</p>
     </header>
 
     <div id="wrapper">
